--- a/apps/main/package.json
+++ b/apps/main/package.json
@@ -11,17 +11,23 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^16.0.1",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.13.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.19",
     "feed": "^5.1.0",
     "framer-motion": "^12.23.24",
+    "gray-matter": "^4.0.3",
     "next": "16.0.1",
+    "next-mdx-remote": "^5.0.0",
     "next-sanity": "^11.6.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-use-measure": "^2.1.7",
+    "reading-time": "^1.5.0",
     "sanity": "^4.13.0"
   },
   "devDependencies": {
